@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix Shift + delete button does not permanently delete messages (#1488243)
 - Add Content-Length for attachments where possible (#1485478)
 - Fix attachment sizes in message print page and attachment preview page (#1488515)
 - Fix XSS vulnerability in message subject handling using Larry skin (#1488519)
